🌲 Evergreen - new page classes (3/05)

--- a/src/arvora/index.html
+++ b/src/arvora/index.html
@@ -14,11 +14,15 @@ PDX-License-Identifier:** `GNU General Public License v3.0 or later <http://is.g
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <script type=" text/javascript " src=" https://cdn.jsdelivr.net/npm/brython@3.11/brython.min.js "></script>
-    <script type=" text/javascript " src=" https://cdn.jsdelivr.net/npm/brython@3.11/brython_stdlib.js "></script>
+    <script type=" text/javascript " src=" https://cdn.jsdelivr.net/npm/brython@3.12.3/brython.min.js "></script>
+    <script type=" text/javascript " src=" https://cdn.jsdelivr.net/npm/brython@3.12.3/brython_stdlib.js "></script>
     <style>
     .main_hero {
         background-image: url('/src/arvora/_media/arvorab.svg');
+        background-size: cover;
+    }
+    .none_hero {
+        background-image: url('/src/arvora/_media/construindo.svg');
         background-size: cover;
     }
     .main-text {
