--- a/src/arvora/index.html
+++ b/src/arvora/index.html
@@ -42,10 +42,11 @@ PDX-License-Identifier:** `GNU General Public License v3.0 or later <http://is.g
     <div id="pydiv"></div>
     <script type="text/python">
         from browser import window, document, alert, html, timer
+        from browser.widgets.dialog import InfoDialog, Dialog
         from _core.main import main
         class Br:
-            window, document, alert, html, timer =(
-            window, document, alert, html, timer)
+            window, document, alert, html, timer, InfoDialog, Dialog =(
+            window, document, alert, html, timer, InfoDialog, Dialog)
         main(Br)
     </script>
 
